CHANGES IN VERSION 1.11.4
------------------------
 o leading edge analysis for GSEA <2016-07-04, Mon>
 
CHANGES IN VERSION 1.11.3
------------------------
 o output igraph object in cnetplot <2016-06-21, Tue>
 o upsetplot generics <2016-06-14, Tue>
 o [[ methods for enrichResult and gseaResult for accessing gene set <2016-06-14, Tue> 
 
CHANGES IN VERSION 1.11.2
------------------------
 o use byte compiler <2016-05-18, Wed>
 o https://github.com/Bioconductor-mirror/DOSE/commit/6c508c6a6816f465bb372f30f4ab99c839d81767

CHANGES IN VERSION 1.11.1
------------------------
 o https://github.com/Bioconductor-mirror/DOSE/commit/7e87d01e671ce1b5fbe974c06b796b1a2970f11c
 
CHANGES IN VERSION 1.10.0
------------------------
 o BioC 3.3 released <2016-05-05, Thu>

CHANGES IN VERSION 2.9.7
------------------------
 o barplot accepts x and colorBy parameters as in dotplot <2016-04-13, Wed>
 o gsfilter function for restricting result with minimal and maximal gene set size <2016-03-31, Thu>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/46
 
CHANGES IN VERSION 2.9.6
------------------------
 o add maxGSSize parameter for hypergeometric test <2016-03-09, Wed>
 o add maxGSSize parameter in GSEA analysis. <2016-03-09, Wed>
   + Default of 500 is fairly standard for GSEA analysis.
   + Usually if the geneset > 500, its probability of being called significant by GSEA rises quite dramatically.
 o fixed R check <2016-03-05, Sat>
 o update ReactomePA citation info <2016-02-17, Wed>

CHANGES IN VERSION 2.9.5
------------------------
 o upset plot for enrichResult object <2016-01-22, Fri>
 
CHANGES IN VERSION 2.9.4
------------------------
 o bug fixed in scaling category sizes in enrichMap <2016-01-10, Sun>
   + use setSize in gseResult

CHANGES IN VERSION 2.9.3
------------------------
 o update enrichMap to scale category sizes <2016-01-04, Mon>
 o update 'show' methods of enrichResult and gseaResult <2015-12-29, Tue>
 
CHANGES IN VERSION 2.9.2