@@ -25,10 +25,11 @@ Description: This package implements five methods proposed by
     for discovering disease associations of high-throughput
     biological data.
 Depends:
-    R (>= 3.1.0)
+    R (>= 3.3.0)
 Imports:
     AnnotationDbi,
     DO.db,
+    fgsea,
     ggplot2,
     GOSemSim,
     graphics,
