@@ -43,6 +43,7 @@ importFrom(DO.db,DOPARENTS)
 importFrom(DO.db,DOTERM)
 importFrom(GOSemSim,combineScores)
 importFrom(GOSemSim,termSim)
+importFrom(fgsea,fgsea)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes)
