@@ -1,9 +1,90 @@
+##' @importFrom fgsea fgsea
+GSEA_fgsea <- function(geneList,
+                       exponent,
+                       nPerm,
+                       minGSSize,
+                       maxGSSize,
+                       pvalueCutoff,
+                       pAdjustMethod,
+                       verbose,
+                       seed=FALSE,
+                       USER_DATA) {
+
+    if(verbose)
+        print("preparing geneSet collections...")
+    
+    geneSets <- getGeneSet(USER_DATA)
+
+    if(verbose)
+        print("GSEA analysis...")
+    
+    tmp_res <- fgsea(pathways=geneSets,
+                 stats=rev(geneList),
+                 nperm=nPerm,
+                 minSize=minGSSize,
+                 maxSize=maxGSSize,
+                 gseaParam=exponent)
+    p.adj <- p.adjust(tmp_res$pval, method=pAdjustMethod)
+    qvalues <- calculate_qvalue(tmp_res$pval)
+
+    Description <- TERM2NAME(tmp_res$pathway, USER_DATA)
+
+    params <- list(pvalueCutoff = pvalueCutoff,
+                   nPerm = nPerm,
+                   pAdjustMethod = pAdjustMethod,
+                   exponent = exponent,
+                   minGSSize = minGSSize,
+                   maxGSSize = maxGSSize
+                   )
+    
+    res <- data.frame(
+        ID = as.character(tmp_res$pathway),
+        Description = Description,
+        setSize = tmp_res$size,
+        enrichmentScore = tmp_res$ES,
+        NES = tmp_res$NES,
+        pvalue = tmp_res$pval,
+        p.adjust = p.adj,
+        qvalues = qvalues,
+        stringsAsFactors = FALSE
+    )
+
+    res <- res[!is.na(res$pvalue),]
+    res <- res[ res$pvalue <= pvalueCutoff, ]
+    res <- res[ res$p.adjust <= pvalueCutoff, ]
+    idx <- order(res$pvalue, decreasing = FALSE)
+    res <- res[idx, ]
+
+    observed_info <- lapply(geneSets[res$ID], function(gs)
+        gseaScores(geneSet=gs,
+                   geneList=geneList,
+                   exponent=exponent)
+        )
+
+    ledge <- leading_edge(observed_info)
+
+    res$rank <- ledge$rank
+    res$leading_edge <- ledge$leading_edge
+    res$core_enrichment <- sapply(ledge$core_enrichment, paste0, collapse='/')
+
+    if (verbose)
+        print("done...")
+    
+    new("gseaResult",
+        result     = res,
+        geneSets   = geneSets,
+        core_enrichment = ledge$core_enrichment,
+        geneList   = geneList,
+        params     = params,
+        readable   = FALSE
+        )
+}
+
 ##' generic function for gene set enrichment analysis
 ##'
 ##'
 ##' @title GSEA_internal
 ##' @param geneList order ranked geneList
-##' @param geneSets gene sets
 ##' @param exponent weight of each step
 ##' @param nPerm permutation numbers
 ##' @param minGSSize minimal size of each geneSet for analyzing
@@ -13,6 +94,7 @@
 ##' @param verbose print message or not
 ##' @param seed set seed inside the function to make result reproducible. FALSE by default.
 ##' @param USER_DATA annotation data
+##' @param by one of 'fgsea' or 'DOSE'
 ##' @return gseaResult object
 ##' @importFrom plyr ldply
 ##' @importFrom parallel detectCores
@@ -23,7 +105,40 @@
 ##' @export
 ##' @author Yu Guangchuang
 GSEA_internal <- function(geneList,
-                 geneSets,
+                 exponent,
+                 nPerm,
+                 minGSSize,
+                 maxGSSize,
+                 pvalueCutoff,
+                 pAdjustMethod,
+                 verbose,
+                 seed=FALSE,
+                 USER_DATA,
+                 by="fgsea") {
+
+    by <- match.arg(by, c("fgsea", "DOSE"))
+    if (!is.sorted(geneList))
+        stop("geneList should be a decreasing sorted vector...") 
+    if (by == 'fgsea') {
+        .fun <- GSEA_fgsea
+    } else {
+        .fun <- GSEA_DOSE
+    }
+
+    .fun(geneList          = geneList,
+         exponent          = exponent,
+         nPerm             = nPerm,
+         minGSSize         = minGSSize,
+         maxGSSize         = maxGSSize,
+         pvalueCutoff      = pvalueCutoff,
+         pAdjustMethod     = pAdjustMethod,
+         verbose           = verbose,
+         seed              = seed,
+         USER_DATA         = USER_DATA)
+}
+
+
+GSEA_DOSE <- function(geneList,
                  exponent,
                  nPerm,
                  minGSSize,
@@ -34,11 +149,8 @@ GSEA_internal <- function(geneList,
                  seed=FALSE,
                  USER_DATA) {
 
-    if (!is.sorted(geneList))
-        stop("geneList should be a decreasing sorted vector...")
-
     if(verbose)
-        sprintf("preparing geneSet collections...")
+        print("preparing geneSet collections...")
     geneSets <- getGeneSet(USER_DATA)
     
     geneSets <- sapply(geneSets, intersect, names(geneList))
@@ -65,10 +177,10 @@ GSEA_internal <- function(geneList,
     if (verbose)
         print("calculating observed enrichment scores...")
     observed_info <- lapply(selected.gs, function(gs)
-                            gseaScores(geneSet=gs,
-                                       geneList=geneList,
-                                       exponent=exponent)
-                            )
+        gseaScores(geneSet=gs,
+                   geneList=geneList,
+                   exponent=exponent)
+        )
     observedScore <- sapply(observed_info, function(x) x$ES)
 
     if (verbose) {
@@ -78,7 +190,7 @@ GSEA_internal <- function(geneList,
     if (seed) {
         seeds <- sample.int(nPerm)
     }
-
+    
     ncores <- floor(detectCores()*.75)
     if (ncores < 1)
         ncores <- 1
@@ -137,13 +249,7 @@ GSEA_internal <- function(geneList,
         
     })
     p.adj <- p.adjust(pvals, method=pAdjustMethod)
-    qobj <- tryCatch(qvalue(pvals, lambda=0.05, pi0.method="bootstrap"), error=function(e) NULL)
-    
-    if (class(qobj) == "qvalue") {
-        qvalues <- qobj$qvalues
-    } else {
-        qvalues <- NA
-    }
+    qvalues <- calculate_qvalue(pvals)
     
     gs.name <- names(selected.gs)
     Description <- TERM2NAME(gs.name, USER_DATA)
@@ -152,7 +258,8 @@ GSEA_internal <- function(geneList,
                    nPerm = nPerm,
                    pAdjustMethod = pAdjustMethod,
                    exponent = exponent,
-                   minGSSize = minGSSize
+                   minGSSize = minGSSize,
+                   maxGSSize = maxGSSize
                    )
 
     
@@ -178,6 +285,29 @@ GSEA_internal <- function(geneList,
     row.names(res) <- res$ID
     observed_info <- observed_info[res$ID]
     
+    ledge <- leading_edge(observed_info)
+
+    res$rank <- ledge$rank
+    res$leading_edge <- ledge$leading_edge
+    res$core_enrichment <- sapply(ledge$core_enrichment, paste0, collapse='/')
+
+    
+    if (verbose)
+        print("done...")
+
+    new("gseaResult",
+        result     = res,
+        geneSets   = geneSets,
+        core_enrichment = ledge$core_enrichment,
+        geneList   = geneList,
+        permScores = permScores,
+        params     = params,
+        readable   = FALSE
+        )
+}
+
+
+leading_edge <- function(observed_info) {
     core_enrichment <- lapply(observed_info, function(x) {
         runningES <- x$runningES
         runningES <- runningES[runningES$position == 1,]
@@ -203,9 +333,7 @@ GSEA_internal <- function(geneList,
         }
         return(rr)
     })
-
-    res$rank <- rank
-
+    
     tags <- sapply(observed_info, function(x) {
         runningES <- x$runningES
         runningES <- runningES[runningES$position == 1,]
@@ -233,33 +361,23 @@ GSEA_internal <- function(geneList,
         return(res)
     })
 
-    N <- length(geneList)
-    signal <- tags * (1-ll) * (N / (N - res$setSize))
-
+    N <- nrow(observed_info[[1]]$runningES)
+    setSize <- sapply(observed_info, function(x) sum(x$runningES$position))
+    signal <- tags * (1-ll) * (N / (N - setSize))
+    
     tags <- paste0(round(tags * 100), "%")
     ll <- paste0(round(ll * 100), "%")
     signal <- paste0(round(signal * 100), "%")
     leading_edge <- paste0('tags=', tags, ", list=", ll, ", signal=", signal)
 
-    res$rank_at_max <- rank
-    res$leading_edge <- leading_edge
-    
-    res$core_enrichment <- sapply(core_enrichment, paste0, collapse='/')
-    
-    if (verbose)
-        print("done...")
-
-    new("gseaResult",
-        result     = res,
-        geneSets   = geneSets,
-        core_enrichment = core_enrichment,
-        geneList   = geneList,
-        permScores = permScores,
-        params     = params,
-        readable   = FALSE
-        )
+    res <- list(rank = rank,
+                tags = tags,
+                list = ll,
+                signal = signal,
+                leading_edge = leading_edge,
+                core_enrichment = core_enrichment)
+    return(res)    
 }
-
 
 ## GSEA algorithm (Subramanian et al. PNAS 2005)
 ## INPUTs to GSEA
