@@ -7,6 +7,18 @@
 }
 
 
+calculate_qvalue <- function(pvals) {
+    qobj <- tryCatch(qvalue(pvals, lambda=0.05, pi0.method="bootstrap"), error=function(e) NULL)
+    
+    if (class(qobj) == "qvalue") {
+        qvalues <- qobj$qvalues
+    } else {
+        qvalues <- NA
+    }
+    return(qvalues)
+}
+
+
 ##' compute information content
 ##'
 ##'
