@@ -6,7 +6,7 @@
 \usage{
 gseNCG(geneList, exponent = 1, nPerm = 1000, minGSSize = 10,
   maxGSSize = 500, pvalueCutoff = 0.05, pAdjustMethod = "BH",
-  verbose = TRUE, seed = FALSE)
+  verbose = TRUE, seed = FALSE, by = "fgsea")
 }
 \arguments{
 \item{geneList}{order ranked geneList}
@@ -26,6 +26,8 @@ gseNCG(geneList, exponent = 1, nPerm = 1000, minGSSize = 10,
 \item{verbose}{print message or not}
 
 \item{seed}{logical}
+
+\item{by}{one of 'fgsea' or 'DOSE'}
 }
 \value{
 gseaResult object
